--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>קטלוג בשמי בוטיק</title>
+  <title>קטלוג בשמי דלוקס סנס</title>
   <meta name="description" content="בשמים בייצור פרטי • הזמנה ושאלות ב-WhatsApp" />
 
   <!-- Fonts: Assistant לעברית; Inter לשמות האנגליים -->
